html and css layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,41 @@
     <title>Timer</title>
 </head>
 <body>
-    
+    <main>
+        <section id="time-container">
+            <section id="numbers-container">
+                <h2>00</h2>:
+                <h2>00</h2>:
+                <h2>00</h2>
+            </section>
+
+            <section id="buttons-container">
+                <section class="select-container"> 
+                    <button><</button>
+                    <select name="" id="" type="">
+                        <option value="">1</option>
+                    </select>
+                    <button>></button>
+                </section>
+                
+                <section class="select-container"> 
+                    <button><</button>
+                    <select name="" id="" type="">
+                        <option value="">1</option>
+                    </select>
+                    <button>></button>
+                </section>
+
+                <section class="select-container"> 
+                    <button><</button>
+                    <select name="" id="" type="">
+                        <option value="">1</option>
+                    </select>
+                    <button>></button>
+                </section>
+            </section>
+        </section>
+    </main>
     <script src="./logic.js"></script>
 </body>
 </html>
