testing select values

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             <section id="buttons-container">
                 <section class="select-container"> 
                     <button><</button>
-                    <select name="" id="" type="">
-                        <option value="">1</option>
+                    <select name="hour" id="" type="">
+                        <option value="1">1</option>
                     </select>
                     <button>></button>
                 </section>
                 
                 <section class="select-container"> 
                     <button><</button>
-                    <select name="" id="" type="">
+                    <select name="minute" id="" type="">
                         <option value="">1</option>
                     </select>
                     <button>></button>
@@ -34,7 +34,7 @@
 
                 <section class="select-container"> 
                     <button><</button>
-                    <select name="" id="" type="">
+                    <select name="second" id="" type="">
                         <option value="">1</option>
                     </select>
                     <button>></button>
