start stop button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                     <button>></button>
                 </section>
             </section>
+
+            <section id="start-stop-container">
+                <button>start</button>
+            </section>
+
         </section>
     </main>
     <script src="./logic.js"></script>
