prototype for times

--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
 
             <section id="buttons-container">
                 <section class="select-container"> 
-                    <button><</button>
+                    <button id="hour-backward"><</button>
                     <select id="hour-select" id="" type="">
                     </select>
-                    <button>></button>
+                    <button id="hour-forward">></button>
                 </section>
                 
                 <section class="select-container"> 
-                    <button><</button>
+                    <button id="minute-backward"><</button>
                     <select id="minute-select" id="" type="">
                     </select>
-                    <button>></button>
+                    <button id="minute-forward">></button>
                 </section>
 
                 <section class="select-container"> 
-                    <button><</button>
+                    <button id="second-backward"><</button>
                     <select id="second-select" id="" type="">
                     </select>
-                    <button>></button>
+                    <button id="second-forward">></button>
                 </section>
             </section>
 
             <section id="start-stop-container">
-                <button>start</button>
+                <button id="start-stop-button">start</button>
             </section>
 
         </section>
